--- a/KeyHouse-FRONT/src/styles/DetalleCasa.css
+++ b/KeyHouse-FRONT/src/styles/DetalleCasa.css
@@ -1,3 +1,28 @@
+.btn-reportar {
+  background-color: #ff4d4f;
+  color: white;
+  margin: 5px;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.btn-reportar:hover {
+  background-color: #e04345;
+}
+
+
+.detalle-galeria {
+  margin-bottom: 1rem;
+}
+
+.detalle-galeria img {
+  object-fit: cover;
+  width: 100%;
+  height: 400px;
+  border-radius: 10px;
+}
+
 .detalle-container {
     padding: 20px;
     max-width: 600px;
