--- a/KeyHouse-FRONT/src/styles/PublicarPropiedad.css
+++ b/KeyHouse-FRONT/src/styles/PublicarPropiedad.css
@@ -1,4 +1,12 @@
 /* PublicarPropiedad.css */
+.autocomplete-input {
+  width: 100%;
+  height: 40px;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
 
 .publicar-propiedad-container {
   max-width: 800px;
